src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Branch</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Events (Branch)</relationshipLabel>
        <relationshipName>Branch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Activities__c</fullName>
        <inlineHelpText>Common expenses in this category include the A/V equipment, Guest speakers, Nightlife, Golf, and other entertainment expenses.</inlineHelpText>
        <label>Activities &amp; Entertainment Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Catering__c</fullName>
        <inlineHelpText>Includes all food and beverage charges, including tips and gratuities.</inlineHelpText>
        <label>Catering Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Contingency__c</fullName>
        <inlineHelpText>Depending on the size or complexity of this event, you may want to add as much as up to 20% as a contingency.</inlineHelpText>
        <label>Contingency Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Decor__c</fullName>
        <inlineHelpText>Included expenses for decor, such as centerpieces, florals, tent rentals, etc.</inlineHelpText>
        <label>Decor Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Other__c</fullName>
        <inlineHelpText>Other expenses not included in previous categories.</inlineHelpText>
        <label>Other Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Printing__c</fullName>
        <inlineHelpText>Items include invitations, name badges, program booklets, event signage and banners.</inlineHelpText>
        <label>Printing Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Site_Rental__c</fullName>
        <inlineHelpText>Projected rental fees for the event and function space, housekeeping, baggage handling, and related expenses.</inlineHelpText>
        <label>Site Rental Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Total__c</fullName>
        <formula>Budget_Site_Rental__c + Budget_Catering__c + Budget_Transportation__c + Budget_Decor__c +  Budget_Printing__c + Budget_Activities__c + Budget_Other__c + Budget_Contingency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total projected expenses</inlineHelpText>
        <label>Total Budget (Expected Gross Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Transportation__c</fullName>
        <inlineHelpText>Includes shuttles, coaches, event transfers, and any related expenses.</inlineHelpText>
        <label>Transportation Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity_Full__c</fullName>
        <formula>Registered_Attendees__c /  Maximum_Registration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity Full</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Evaluation__c</fullName>
        <description>Enter Event Evaluation Score post-Event (1-5, with 5 as the highest). Average of Session Rating.</description>
        <label>Event Evaluation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Facilitator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Facilitator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Practitioner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Facilitators</relationshipLabel>
        <relationshipName>Event_Facilitator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nearly New Sale</fullName>
                </value>
                <value>
                    <fullName>Cheeky Monkeys tea Party</fullName>
                </value>
                <value>
                    <fullName>Ball/Dinner Dance</fullName>
                </value>
                <value>
                    <fullName>Baby Show</fullName>
                </value>
                <value>
                    <fullName>Baby&apos;s First Aid Course</fullName>
                </value>
                <value>
                    <fullName>Baby&apos;s Taste Journey</fullName>
                </value>
                <value>
                    <fullName>Summer Draw</fullName>
                </value>
                <value>
                    <fullName>Big Push</fullName>
                </value>
                <value>
                    <fullName>Fundraising Event</fullName>
                </value>
                <value>
                    <fullName>Social Event</fullName>
                </value>
                <value>
                    <fullName>Executive Event</fullName>
                </value>
                <value>
                    <fullName>Internal Event</fullName>
                </value>
                <value>
                    <fullName>Launch Event</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>User Conference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Vendor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event Vendor Account primarily responsible for managing this event</description>
        <inlineHelpText>Select an Account with the Type = &apos;Event Vendor&apos; for this event.</inlineHelpText>
        <label>Event Vendor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Event Venue</relationshipLabel>
        <relationshipName>Event_Venue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Vision__c</fullName>
        <label>Event Vision</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Website__c</fullName>
        <label>Event Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Expenses_Activities__c</fullName>
        <label>Activities &amp; Entertainment Expenses</label>
        <summarizedField>Event_Expense__c.Site_Rental__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Activities &amp; Entertainment</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expenses_Catering__c</fullName>
        <label>Catering Expenses</label>
        <summarizedField>Event_Expense__c.Site_Rental__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Catering</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expenses_Decor__c</fullName>
        <label>Decor Expenses</label>
        <summarizedField>Event_Expense__c.Site_Rental__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Decor</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expenses_Other__c</fullName>
        <label>Other Expenses</label>
        <summarizedField>Event_Expense__c.Site_Rental__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expenses_Printing__c</fullName>
        <label>Printing Expenses</label>
        <summarizedField>Event_Expense__c.Site_Rental__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Printing</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expenses_Site_Rental__c</fullName>
        <label>Site Rental Expenses</label>
        <summarizedField>Event_Expense__c.Site_Rental__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Site Rental</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expenses_Transportation__c</fullName>
        <label>Transportation Expenses</label>
        <summarizedField>Event_Expense__c.Site_Rental__c</summarizedField>
        <summaryFilterItems>
            <field>Event_Expense__c.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Transportation</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Expense__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Final_Attendance__c</fullName>
        <label>Final Attendance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Maximum_Registration__c</fullName>
        <inlineHelpText>Enter Maximum Registration # allowed for this event.</inlineHelpText>
        <label>Maximum Registration #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Actual_Cost__c</fullName>
        <formula>Total_Expenses__c - Total_Actual_MDF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Expected_Cost__c</fullName>
        <formula>Budget_Total__c - Total_Expected_MDF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Expected Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Person_Per_Ticket__c</fullName>
        <label>Person Count Per Ticket</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price of One Ticket</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Vendor_Contact_Phone__c</fullName>
        <formula>Primary_Vendor_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary vendor contact for this event.</description>
        <inlineHelpText>This is the primary vendor contact for this event, filtered by list of available contacts for this vendor account.</inlineHelpText>
        <label>Primary Vendor Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Event_Vendor_Account__c</valueField>
            </filterItems>
            <infoMessage>Please select the primary vendor contact for this event. Choose from the list of available contacts for this vendor</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>Worldwide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registered_Attendees__c</fullName>
        <inlineHelpText>Running total of Event Registrations for this Event</inlineHelpText>
        <label>Registered Attendees</label>
        <summaryForeignKey>Event_Registration__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Targeted_Attendance__c</fullName>
        <label>Targeted Attendance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Actual_MDF__c</fullName>
        <label>Total Actual MDF</label>
        <summarizedField>Event_MDF__c.MDF_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Event_MDF__c.Received_Payment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_MDF__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Expected_MDF__c</fullName>
        <label>Total Expected MDF</label>
        <summarizedField>Event_MDF__c.MDF_Amount__c</summarizedField>
        <summaryForeignKey>Event_MDF__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <formula>Expenses_Site_Rental__c + Expenses_Catering__c +  Expenses_Transportation__c +  Expenses_Decor__c  + Expenses_Printing__c + Expenses_Activities__c + Expenses_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Expenses (Actual Gross Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>